--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
     "name": "biblioteca-app",
     "version": "1.0.0",
-    "main": "src/main.js",
+    "main": "main.js",
     "scripts": {
         "start": "electron .",
-        "dev": "nodemon src/main.js"
+        "dev": "nodemon main.js"
     },
     "devDependencies": {
         "electron": "^21.0.0",
         "nodemon": "^3.0.0"
     },
     "dependencies": {
+        "sqlite3": "^5.1.7",
+        "uuid": "^11.0.2",
         "xlsx": "^0.18.5"
     }
 }
